function creation/script/template/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: $demo$
  namespace: function
spec:
  selector:
    function: $demo$
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
